; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_platform.c_platform_drv_probe.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_platform.c_platform_drv_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.platform_driver = type { i32 (%struct.platform_device*)* }
%struct.platform_device = type opaque
%struct.platform_device.0 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*)* @platform_drv_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @platform_drv_probe(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.platform_driver*, align 8
  %4 = alloca %struct.platform_device.0*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %5 = load %struct.device*, %struct.device** %2, align 8
  %6 = getelementptr inbounds %struct.device, %struct.device* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call %struct.platform_driver* @to_platform_driver(i32 %7)
  store %struct.platform_driver* %8, %struct.platform_driver** %3, align 8
  %9 = load %struct.device*, %struct.device** %2, align 8
  %10 = call %struct.platform_device.0* @to_platform_device(%struct.device* %9)
  store %struct.platform_device.0* %10, %struct.platform_device.0** %4, align 8
  %11 = load %struct.platform_driver*, %struct.platform_driver** %3, align 8
  %12 = getelementptr inbounds %struct.platform_driver, %struct.platform_driver* %11, i32 0, i32 0
  %13 = load i32 (%struct.platform_device*)*, i32 (%struct.platform_device*)** %12, align 8
  %14 = load %struct.platform_device.0*, %struct.platform_device.0** %4, align 8
  %15 = bitcast %struct.platform_device.0* %14 to %struct.platform_device*
  %16 = call i32 %13(%struct.platform_device* %15)
  ret i32 %16
}

declare dso_local %struct.platform_driver* @to_platform_driver(i32) #1

declare dso_local %struct.platform_device.0* @to_platform_device(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
